--- a/stlyle.css
+++ b/stlyle.css
@@ -1,8 +1,21 @@
 body{
- background-color: rgb(169, 29, 182);   
-color: rgb(7, 7, 7);
+ background-color: rgb(241, 233, 241);   
+color: rgb(240, 24, 204);
 } 
 footer{
   background-color: rgb(9, 9, 10);  
-  color: rgb(23, 206, 206);
+  color: rgb(229, 252, 252);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2rem ;
 }
+
+
+  footer p {
+     text-align:center;
+    font-size: 0,1rem ;
+    margin-top: 0,1rem;
+  }
+
+ 
